[package]
name = "cppn"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/cppn-rs"
description = "Compositional Pattern Producing Networks"
keywords = ["evolution", "neuro", "net", "cppn"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

acyclic-network = {git = "https://github.com/mneumann/acyclic-network-rs"}
fixedbitset = "0.1.0"

[dev-dependencies]

rand = "0.3"
