[package]
name = "cppn"
version = "0.3.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/cppn-rs"
description = "Compositional Pattern Producing Networks"
keywords = ["evolution", "neuro", "net", "cppn"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

acyclic-network = "0.2"
fixedbitset = "0.1"

serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]

rand = "0.4"
